plugins {
    id "java"
    id "org.springframework.boot" version "3.2.5"
    id "io.spring.dependency-management" version "1.1.4"
}

group = "ru.tsu.hits"
version = "1"

java {
    sourceCompatibility = "21"
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation "org.springframework.boot:spring-boot-starter-data-jpa"
    implementation "org.springframework.boot:spring-boot-starter-web"
    implementation "org.springframework.boot:spring-boot-starter-mail"
    implementation "org.springframework.boot:spring-boot-starter-validation"
    implementation "org.springframework.boot:spring-boot-starter-security"
    implementation "org.springframework.boot:spring-boot-starter-thymeleaf"
    implementation "org.flywaydb:flyway-core"

    implementation "org.postgresql:postgresql:${postgreSqlDriverVersion}"
    implementation "org.flywaydb:flyway-core:${flywayCoreVersion}"

    compileOnly "org.projectlombok:lombok:${lombokVersion}"
    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"

    implementation "org.mapstruct:mapstruct:${mapstructVersion}"
    annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"

    implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:${springDocVersion}"

    implementation "org.hibernate.orm:hibernate-jpamodelgen:${jpaModelGenVersion}"
    annotationProcessor "org.hibernate.orm:hibernate-jpamodelgen:${jpaModelGenVersion}"
    compileOnly "org.hibernate.orm:hibernate-jpamodelgen:${jpaModelGenVersion}"

    implementation "io.jsonwebtoken:jjwt-api:${jjwtVersion}"
    implementation "io.jsonwebtoken:jjwt-impl:${jjwtVersion}"
    implementation "io.jsonwebtoken:jjwt-jackson:${jjwtVersion}"

    implementation "io.minio:minio:${minioVersion}"
}
